feat: Localize privacy policy content to Korean and update hosting service details

--- a/privacy.html
+++ b/privacy.html
@@ -36,41 +36,25 @@
           <a href="index.html" aria-label="Back to homepage">← Back to main page</a>
         </nav>
 
-        <h1>Privacy Overview</h1>
+        <h1>개인정보 처리방침</h1>
 
         <section aria-labelledby="analytics-heading">
-          <h2 id="analytics-heading">Analytics</h2>
-          <p>The services contained in this section enable the Owner to monitor and analyze web traffic and can be used to keep track of User behavior.</p>
-
-          <h3>Example LLC</h3>
-          <ul role="list">
-            <li>Personal Data: various types of Data as specified in the privacy policy of the service</li>
-            <li><a href="https://example.com/privacy/" target="_blank" rel="noopener">Privacy Policy</a></li>
-          </ul>
+          <h2 id="analytics-heading">웹 분석</h2>
+          <p>본 섹션의 서비스는 웹사이트 운영자가 방문자 트래픽을 모니터링하고 사용자의 행동을 분석하는 데 활용됩니다.</p>
         </section>
 
         <section aria-labelledby="external-content-heading">
-          <h2 id="external-content-heading">External Content</h2>
-          <p>This type of service allows you to view content hosted on external platforms directly from the pages of this website and interact with them.</p>
-          <p>This type of service might still collect web traffic data for the pages where the service is installed, even when Users do not use it.</p>
-
-          <h3>Example LLC</h3>
-          <ul role="list">
-            <li>Personal Data: Usage Data; various types of Data as specified in the privacy policy of the service</li>
-            <li><a href="https://example.com/privacy/" target="_blank" rel="noopener">Privacy Policy</a></li>
-          </ul>
+          <h2 id="external-content-heading">외부 콘텐츠</h2>
+          <p>이 서비스를 통해 사용자는 외부 플랫폼에서 제공되는 콘텐츠를 현재 웹사이트에서 바로 확인하고 상호작용할 수 있습니다.</p>
+          <p>이러한 서비스들은 사용자가 직접 이용하지 않더라도 해당 서비스가 포함된 페이지의 트래픽 데이터를 수집할 수 있습니다.</p>
         </section>
 
         <section aria-labelledby="hosting-heading">
-          <h2 id="hosting-heading">Hosting and Infrastructure</h2>
-          <p>This type of service has the purpose of hosting Data and files that enable this website to exist.</p>
-          <p>Some services among those listed below, if any, may work through geographically distributed servers, making it difficult to determine the actual location where the Personal Data are stored.</p>
-
-          <h3>Example LLC</h3>
-          <ul role="list">
-            <li>Personal Data: various types of Data as specified in the privacy policy of the service</li>
-            <li><a href="https://example.com/privacy" target="_blank" rel="noopener">Privacy Policy</a></li>
-          </ul>
+          <h2 id="hosting-heading">호스팅 및 인프라</h2>
+          <p>이 서비스는 웹사이트 운영에 필요한 각종 데이터와 파일을 호스팅하는 것을 주 목적으로 합니다.</p>
+          <p>제공되는 서비스 중 일부는 전 세계에 분산된 서버를 통해 운영되므로, 개인정보가 실제로 저장되는 물리적 위치를 정확히 파악하기 어려울 수 있습니다.
+            Vercel Inc.에서 처리하는 개인정보의 유형과 범위는 서비스 이용약관 및 <a href="https://vercel.com/legal/privacy-policy" target="_blank">개인정보 처리방침</a>에 상세히 명시되어 있습니다.
+            당사는 최신 기술 플랫폼과 원활한 통합을 위해 Vercel 서비스를 이용하고 있습니다.</p>
         </section>
 
         <footer>
