feat: Update meta tags, favicon, and navigation links

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>고 형규</title>
-    <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> <!-- Update this with your own favicon -->
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+    <meta name="description" content="저는 백엔드 개발자로 일하고 있고, 운동과 게임을 좋아해요. 특히 달리기를 좋아해요. 스트레스 풀기엔 운동만한게 없죠 🤙">
 
     <!-- Keywords -->
-    <meta name="keywords" content="your name, industry, and specialties">
+    <meta name="keywords" content="고형규, Backend Engineer, DevOps">
 
     <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <meta rel="canonical" href="https://yourwebsite.com">
+    <meta rel="canonical" href="https://feelsgoodfrog-links.vercel.app/">
 
     <!-- Author Information -->
-    <meta name="author" content="Your Name">
+    <meta name="author" content="고형규">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
@@ -67,14 +67,14 @@
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
 
+              <!-- Generic Blog -->
+              <a class="button button-default" href="https://feelsgoodfrog.vercel.app/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-blog.svg" alt="Blog Icon">Resume</a>
+
               <!-- GitHub -->
               <a class="button button-github" href="https://github.com/ghghghko" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
 
               <!-- Tistory -->
               <a class="button button-tistory" href="https://pepega.tistory.com/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/tistory.svg" alt="Tistory Logo">Tistory (블로그)</a>
-
-              <!-- Generic Blog -->
-              <a class="button button-default" href="https://feelsgoodfrog.vercel.app/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-blog.svg" alt="Blog Icon">Resume</a>
 
               <!-- Instagram -->
               <a class="button button-instagram" href="https://www.instagram.com/hg____ko/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
@@ -88,7 +88,7 @@
 
       <!-- Feel free to add your own footer information, including updating `privacy.html` to reflect how your LittleLink fork is set up -->
       <footer>
-        <a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
+        <a href="privacy.html">Privacy Policy</a>
       </footer>
 
     </div>
