--- a/index.html
+++ b/index.html
@@ -17,17 +17,10 @@
     <title>고 형규</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> <!-- Update this with your own favicon -->
 
-    <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="저는 백엔드 개발자로 일하고 있고, 운동과 게임을 좋아해요. 특히 달리기를 좋아해요. 스트레스 풀기엔 운동만한게 없죠 🤙">
-
-    <!-- Keywords -->
-    <meta name="keywords" content="고형규, Backend Engineer, DevOps">
-
-    <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <meta rel="canonical" href="https://feelsgoodfrog-links.vercel.app/">
-
-    <!-- Author Information -->
-    <meta name="author" content="고형규">
+    <meta property="og:title" content="고 형규">
+    <meta property="og:description" content="저는 백엔드 개발자로 일하고 있고, 운동과 게임을 좋아해요. 특히 달리기를 좋아해요. 스트레스 풀기엔 운동만한게 없죠 🤙">
+    <meta property="og:image" content="/images/favicon.ico">
+    <meta property="og:url" content="https://feelsgoodfrog-links.vercel.app/">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
