feat: Add Open Graph image properties for enhanced link previews

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> <!-- Update this with your own favicon -->
 
     <meta property="og:title" content="고 형규">
+    <meta property="og:image" content="/images/favicon.ico">
+    <meta property="og:image:width" content="16">
+    <meta property="og:image:height" content="16">
     <meta property="og:description" content="저는 백엔드 개발자로 일하고 있고, 운동과 게임을 좋아해요. 특히 달리기를 좋아해요. 스트레스 풀기엔 운동만한게 없죠 🤙">
     <meta property="og:url" content="https://feelsgoodfrog-links.vercel.app/">
 
