--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script>
+          import { inject } from '@vercel/analytics';
+          inject();
+      </script>
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
     <title>고 형규</title>
